--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
 </body>
 
 <script>
-  // credit: https://gist.github.com/kmaida/6045266
-function convertTimestamp(timestamp) {
-  var d = new Date(timestamp * 1000),	// Convert the passed timestamp to milliseconds
-		yyyy = d.getFullYear(),
-		mm = ('0' + (d.getMonth() + 1)).slice(-2),	// Months are zero based. Add leading 0.
-		dd = ('0' + d.getDate()).slice(-2),			// Add leading 0.
-		hh = d.getHours(),
-		h = hh,
-		min = ('0' + d.getMinutes()).slice(-2),		// Add leading 0.
-		ampm = 'AM',
-		time;
-			
-	if (hh > 12) {
-		h = hh - 12;
-		ampm = 'PM';
-	} else if (hh === 12) {
-		h = 12;
-		ampm = 'PM';
-	} else if (hh == 0) {
-		h = 12;
-	}
+	const days = ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'];
+	const months = ['January','February','March','April','May','June','July','August','September','October','November','December'];
 	
-	// ie: 2013-02-18, 8:35 AM	
-	time = yyyy + '-' + mm + '-' + dd + ', ' + h + ':' + min + ' ' + ampm;
+	var day = days[ now.getDay() ];
+	var month = months[ now.getMonth() ];
 		
-	return time;
-}
+	  // credit: https://gist.github.com/kmaida/6045266
+	function convertTimestamp(timestamp) {
+	  var d = new Date(timestamp * 1000),	// Convert the passed timestamp to milliseconds
+			yyyy = d.getFullYear(),
+			mm = ('0' + (d.getMonth() + 1)).slice(-2),	// Months are zero based. Add leading 0.
+			dd = ('0' + d.getDate()).slice(-2),			// Add leading 0.
+			hh = d.getHours(),
+			h = hh,
+			min = ('0' + d.getMinutes()).slice(-2),		// Add leading 0.
+			ampm = 'AM',
+			time;
+				
+		if (hh > 12) {
+			h = hh - 12;
+			ampm = 'PM';
+		} else if (hh === 12) {
+			h = 12;
+			ampm = 'PM';
+		} else if (hh == 0) {
+			h = 12;
+		}
+		
+		// ie: 2013-02-18, 8:35 AM	
+		// time = yyyy + '-' + mm + '-' + dd + ', ' + h + ':' + min + ' ' + ampm;
 
-  document.getElementById("date").innerHTML = convertTimestamp(1726336800);
+		//ie: Saturday, September 14, 2024 7:00 AM
+		time = days[d.getDay()] + ', ' + months[d.getMonth()] + ' ' + dd + ', ' + yyyy + ' ' + h + ':' + min + ' ' + ampm;
+			
+		return time;
+	}
+
+	document.getElementById("date").innerHTML = convertTimestamp(1726336800);
 </script>
