--- a/index.html
+++ b/index.html
@@ -1,50 +1,18 @@
-<head></head>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Date to Local Time</title>
+</head>
 <body>
 	<input type="hidden" name="time">
-	<span id="date"></span>
+	<p id="date"></p>
 </body>
 
 <script>
-	const days = ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'];
-	const months = ['January','February','March','April','May','June','July','August','September','October','November','December'];
-	
-	const now = new Date();
-	var day = days[ now.getDay() ];
-	var month = months[ now.getMonth() ];
-		
-	  // credit: https://gist.github.com/kmaida/6045266
-	function convertTimestamp(d) {
-		let yyyy = d.getFullYear(),
-			mm = ('0' + (d.getMonth() + 1)).slice(-2),	// Months are zero based. Add leading 0.
-			dd = ('0' + d.getDate()).slice(-2),			// Add leading 0.
-			hh = d.getHours(),
-			h = hh,
-			min = ('0' + d.getMinutes()).slice(-2),		// Add leading 0.
-			ampm = 'AM',
-			time;
-				
-		if (hh > 12) {
-			h = hh - 12;
-			ampm = 'PM';
-		} else if (hh === 12) {
-			h = 12;
-			ampm = 'PM';
-		} else if (hh == 0) {
-			h = 12;
-		}
-		
-		// ie: 2013-02-18, 8:35 AM	
-		// time = yyyy + '-' + mm + '-' + dd + ', ' + h + ':' + min + ' ' + ampm;
-
-		//ie: Saturday, September 14, 2024 7:00 AM
-		time = days[d.getDay()] + ', ' + months[d.getMonth()] + ' ' + dd + ', ' + yyyy + ' ' + h + ':' + min + ' ' + ampm;
-			
-		return time;
-	}
-	
 	// credit: https://stackoverflow.com/a/67221634/11433667
 	const params = new URLSearchParams(window.location.search); //parse params
 	let date = params.get("time"); //get time param
+	const now = new Date();
 
 
 	console.log(date);
@@ -59,5 +27,5 @@
 
 	console.log(date);
 
-	document.getElementById("date").innerHTML = (date === now ? "Current Time: <strong>" : "Unix Timestamp " + params.get("time") + " as date: <strong>") + convertTimestamp(date) + "</strong>";
+	document.getElementById("date").innerHTML = (date === now ? "Current Time: <strong>" : (params.get("desc") ? params.get("desc") + ": " : "Unix Timestamp " + params.get("time") + " as date: ")) + "<strong>" + date + "</strong>";
 </script>
